--- a/BMICalculator/Resources/layout/content_main.xml
+++ b/BMICalculator/Resources/layout/content_main.xml
@@ -18,7 +18,7 @@
         android:id="@+id/textView1" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="200px"
         android:layout_height="wrap_content"
         android:id="@+id/heightEditText"
         android:inputType="none|numberDecimal" />
@@ -33,19 +33,28 @@
         android:layout_marginTop="60.0dp" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="200px"
         android:layout_height="wrap_content"
         android:id="@+id/weightEditText"
-        android:layout_marginTop="75.0dp"
+        android:layout_marginTop="80.0dp"
         android:inputType="none|numberDecimal" />
 
     <Button
         android:text="Calculate BMI"
-        android:layout_width="wrap_content"
+        android:layout_width="650px"
         android:layout_height="wrap_content"
         android:id="@+id/calculateButton"
         android:layout_marginTop="150.0dp"
-        android:layout_marginLeft="130.0dp"/>
+        android:layout_marginLeft="30.0dp"
+        android:layout_marginRight="0.0dp" />
+
+    <Button
+        android:text="Show Results"
+        android:layout_width="650px"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="220.0dp"
+        android:layout_marginLeft="30.0dp"
+        android:id="@+id/resultsButton" />
 
     <TextView
         android:text="BMI"
@@ -53,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/resultTextView"
-        android:layout_marginTop="220.0dp"
+        android:layout_marginTop="290.0dp"
         android:layout_marginLeft="150.0dp" />
         /> 
 
